Updated Local names
Butthole 3

--- a/locale/en/smimple.cfg
+++ b/locale/en/smimple.cfg
@@ -1,4 +1,57 @@
 [entity-name]
-ore-spawner=Ore Spawner
+#Ores
+aluminum-ore=Aluminum Ore
+copper-ore=Copper Ore
+diamond-ore=Diamond Ore
+gold-ore=Gold Ore
+iron-ore=Iron Ore
+#/Ores
+
+#Gears
+aluminum-gear=Aluminum Gear
+copper-gear=Copper Gear
+diamond-gear=Diamond Gear
+gold-gear=Gold Gear
+iron-gear=Iron Gear
+#/Gear
+
+#Plates
+aluminum-plate=Aluminum Plate
+copper-plate=Copper Plate
+diamond-plate=Diamond Plate
+gold-plate=Gold Plate
+iron-plate=Iron Plate
+#/Plates
+
+#Wire
+aluminum-wire=Aluminum Wire
+copper-wire=Copper Wire
+diamond-wire=Diamond Wire
+gold-wire=Gold Wire
+iron-wire=Iron Wire
+#/wire
+
+#Liquid
+liquid-aluminum=Liquid Aluminum
+liquid-copper=Liquid Copper
+liquid-diamond=Liquid Diamond
+liquid-gold=Liquid Gold
+liquid-iron=Liquid Iron
+#/Liquid
+
+#Spliters
+left-spliter=Left Spliter
+right-spliter=Right Spliter
+3-way-splitter=3 Way splitter
+#/Spliters
+
+#Machines
+crafter=Crafter
+cutter=Gear Cutter
+furnace=Furnace
+hydrolic-press=Hydrolic Press
+ore-maker=Ore Spawner
+seller=Seller
 wire-cutter=Wire Cutter
+#/Machines
 
